[package]
name = "bat-cli"
version = "0.1.18"
edition = "2021"
description = "Blockchain Auditor Toolkit (BAT)"
license = "MIT"
homepage = "https://github.com/matiasbn/bat-cli"
documentation = "https://github.com/matiasbn/bat-cli"
repository = "https://github.com/matiasbn/bat-cli.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.10.2"
serde = { version = "1.0.148", features = ["derive"] }
toml = "0.5"
walkdir = "2.3.2"
