[package]
name = "bat-cli"
version = "0.5.1"
edition = "2021"
description = "Blockchain Auditor Toolkit (BAT)"
license = "MIT"
homepage = "https://github.com/matiasbn/bat-cli"
documentation = "https://github.com/matiasbn/bat-cli"
repository = "https://github.com/matiasbn/bat-cli.git"
readme = "README.md"
exclude = ["package.json", "z-Bat-bkp.toml", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.10.2"
serde = { version = "1.0.148", features = ["derive"] }
toml = "0.7.2"
walkdir = "2.3.2"
reqwest = { version = "0.11.13", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
serde_json = "1.0.91"
colored = "2.0.0"
normalize_url = "0.2.0"
thiserror = "1.0.38"
strum_macros = "0.24.3"
Inflector = "0.11.4"
rand = "0.8.5"
strum = "0.24.1"
indicatif = "0.17.3"
env_logger = "0.10.0"
log = "0.4.17"
error-stack = "0.3.1"
clap-verbosity-flag = "2.0.0"
confy = "0.5.1"

[profile.dev]
overflow-checks = true
lto = true
opt-level = 0
codegen-units = 1
incremental = true
debug = true

[profile.release]
overflow-checks = true
lto = true
opt-level = 3
codegen-units = 1
