[package]
name = "bat-cli"
version = "0.8.8"
edition = "2021"
description = "Blockchain Auditor Toolkit (BAT)"
license = "MIT"
homepage = "https://github.com/matiasbn/bat-cli"
documentation = "https://github.com/matiasbn/bat-cli"
repository = "https://github.com/matiasbn/bat-cli.git"
readme = "README.md"
exclude = ["package.json", "z-Bat-bkp.toml", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11.0"
serde = { version = "1.0.148", features = ["derive"] }
toml = "0.8.10"
walkdir = "2.3.2"
reqwest = { version = "0.11.13", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
serde_json = "1.0.91"
colored = "2.0.0"
normalize_url = "0.2.0"
strum_macros = "0.26.1"
Inflector = "0.11.4"
rand = "0.8.5"
strum = "0.26.1"
indicatif = "0.17.3"
env_logger = "0.11.2"
log = "0.4.17"
error-stack = "0.4.1"
clap-verbosity-flag = "2.0.0"
confy = "0.6.0"
figment = { version = "0.10.8", features = ["toml"] }
regex = "1.7.1"
syn = { version = "2", features = ["full", "parsing", "visit"] }
proc-macro2 = "1"
quote = "1"
log4rs = "1.2.0"
assert_fs = "1.0.10"
image = "0.24"
lazy-regex = "2.5.0"
once_cell = "1"
silicon = { version = "0.5", default-features = false, features = ["harfbuzz", "bin"] }
syntect = { version = "5.1", default-features = false, features = ["parsing", "dump-load", "regex-onig", "plist-load", "yaml-load"] }
tabled = "0.10.0"

[profile.dev]
overflow-checks = true
lto = true
opt-level = 0
codegen-units = 1
incremental = true
debug = true

[profile.release]
overflow-checks = true
lto = true
opt-level = 3
codegen-units = 1
