[package]
name = "sam-cli"
author = "Matías Barrios"
version = "0.1.0"
edition = "2021"
about = "A CLI for Solana Audit Methodology"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.148", features = ["derive"] }