[package]
name = "batman"
version = "0.1.0"
edition = "2021"
description = "Blockchain Audit Toolkit for MANual (BATMAN) review"
license = "MIT"
homepage = "https://github.com/matiasbn/batman-cli"
documentation = "https://github.com/matiasbn/batman-cli"
repository = "https://github.com/matiasbn/batman-cli.git"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.148", features = ["derive"] }
toml = "0.5"
